// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Board view 1`] = `
{
  "lines": 2143,
  "sha256": "ccd12b5fbbc837af005884b7af6316508710a8c75585331f2e990141a3e4da0f",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Gantt view 1`] = `
{
  "lines": 1989,
  "sha256": "a7bc67971b1ea9d2afc09df3ddabcf8f2d72aabb2af510682820e885f7b0fe06",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Lookahead view 1`] = `
{
  "lines": 2234,
  "sha256": "e775bee2ec30d8ec59b5069335384900977c7d2ab1d90bcd14b599c7e28ace72",
}
`;

exports[`lane DC — the classic tab at 820 (tablet branch, golden) Today view 1`] = `
{
  "lines": 2194,
  "sha256": "6beb917b997b63b0ded7aa036b1a724fe2d9833c3b596a3a401fe543854aaeb1",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /(tabs)/discover/schedule 1`] = `
{
  "lines": 511,
  "sha256": "2882694e2f466f4bc56379203b1974af170877c8526d34efd76fd6103887d773",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /(tabs)/schedule (MobileScheduleScreen) 1`] = `
{
  "lines": 1817,
  "sha256": "c15e9c65895ff5c0589e0ce6cd8cc4bb5c4d8938d3933c519baf05d6c924e98e",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /copilot-hub 1`] = `
{
  "lines": 549,
  "sha256": "6d0ffc667a5837eba1a311b82fb74d946c3ad2b1916a4b6b2997b848a0448d84",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /schedule-review with a draft 1`] = `
{
  "lines": 465,
  "sha256": "08c09f938eea1248c040aec50356c9b3c52656a99fc1640c9ba9889c2e9c64f6",
}
`;

exports[`lane DC — the phone is unchanged (golden, 390 × 844 iOS) /schedule-wizard 1`] = `
{
  "lines": 1874,
  "sha256": "a0b3f5411a35559bd94b5c6142635237eedd0d45e7975f60337a7212f7bf8426",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) AddTaskModal, open 1`] = `
{
  "lines": 111,
  "sha256": "5449dc16a31f193ec7503dcaa36f7d352e4243d61e7d5b1464e70ba86a293cae",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) BaselineManagerModal, open 1`] = `
{
  "lines": 43,
  "sha256": "b49a5c188f6af94312a0db88db0ef13a9f6bbf3ba4f575038083a6dca950cb6f",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) COScheduleReflowPreviewModal, open 1`] = `
{
  "lines": 67,
  "sha256": "d30b32ad7fc8f08d8606673a2ebf5513616fb2be888384610bb4dc1a25d26dec",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ClosuresModal, open 1`] = `
{
  "lines": 186,
  "sha256": "a6f8aab84db2e5b474de628c435d3f454011d5cde8351b7bb4abe8db9cb181c5",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) CriticalPathPanel, open 1`] = `
{
  "lines": 55,
  "sha256": "8bb05eaca5bf29115792f06f2d787628b1ee0e6b922f5c93201f74969c258c21",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ExportSheet, open 1`] = `
{
  "lines": 91,
  "sha256": "b09165bd1328a415d8088fe16497012e35f23a83d32bc09fe5b93378c7e1b648",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) LevelingPreviewModal, open 1`] = `
{
  "lines": 47,
  "sha256": "a51c76cbbc0733391bd751a20603ca863be7e69f2caaf1f4d2de40d51f907b09",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) PredecessorPicker, open 1`] = `
{
  "lines": 72,
  "sha256": "e10508558b0c77c49d8b7f9b76c14e1d0d97f91793f37b3ec19d8931731c3eef",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) QuickBuildModal, open 1`] = `
{
  "lines": 186,
  "sha256": "612937c8a26b4d441c24b2cf8097ebb4293131468f4852a43c5600a86589fc70",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleAuditModal, open 1`] = `
{
  "lines": 20,
  "sha256": "33d957f7f30819e060e8a592c369dc16aafa74b6ab77556bac9d0236fd8683bb",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleHealthDetail, open 1`] = `
{
  "lines": 425,
  "sha256": "f6e469557d33fbfa80df4b3cf84c843345d195b4b887716c2ec4b0ced83c90ba",
}
`;

exports[`lane DC — the schedule tool sheets (golden, 390 phone) ScheduleSettingsMenu, open 1`] = `
{
  "lines": 291,
  "sha256": "19053f2efa8fae4f51b4729001c05b852a55922d0364d01834ba7efe20366a70",
}
`;
